--- a/account.html
+++ b/account.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Account Management</title>
+<title>Manage Account</title>
 <style>
   body {
     background-color: black;
@@ -17,48 +17,26 @@
     margin: 0;
     padding: 0;
   }
-  header {
-    text-align: center;
-    padding: 20px;
-    border-bottom: 2px solid #ff0000;
-    box-shadow: 0 0 10px #ff0000;
-    background: rgba(0,0,0,0.7);
-    position: relative;
-  }
-  header h1 {
-    color: #ff0000;
-    text-shadow: 0 0 8px #ff0000;
-    margin: 0;
-  }
+
   .container {
-    display: flex;
-    justify-content: center;
-    margin: 40px 20px;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-  }
-  .box {
+    max-width: 600px;
+    margin: 50px auto;
     background: rgba(0,0,0,0.7);
     border: 2px solid #ff0000;
     box-shadow: 0 0 10px #ff0000;
     padding: 20px;
-    width: 300px;
     text-align: center;
   }
-  input[type="text"] {
-    width: 80%;
-    padding: 6px;
-    margin-top: 10px;
-    border-radius: 5px;
-    border: 2px solid hotpink;
-    background: rgba(0,0,0,0.7);
-    color: hotpink;
-    font-family: 'Courier New', monospace;
+
+  h1 {
+    color: #ff0000;
+    text-shadow: 0 0 8px #ff0000;
+    margin-bottom: 20px;
   }
+
   button {
     padding: 8px 12px;
-    margin-top: 10px;
+    margin: 10px 5px;
     border: 2px solid hotpink;
     background: rgba(0,0,0,0.7);
     color: hotpink;
@@ -67,85 +45,115 @@
     border-radius: 5px;
     font-family: 'Courier New', monospace;
   }
+
   button:hover {
     background: rgba(255,0,255,0.1);
+  }
+
+  input {
+    padding: 6px;
+    margin-top: 10px;
+    width: 80%;
+    border: 2px solid #ff0000;
+    border-radius: 5px;
+    background: rgba(0,0,0,0.7);
+    color: #fff;
+    font-family: 'Courier New', monospace;
+  }
+
+  .danger {
+    border-color: #ff0000;
+    color: #ff0000;
   }
 </style>
 </head>
 <body>
 
-<header>
-  <h1>Account Management</h1>
-</header>
-
 <div class="container">
-  <div class="box" id="accountBox">
-    <h3>Account Username: <span id="usernameDisplay"></span></h3>
-    <button id="editBtn">Edit Username</button>
-    <div id="editArea" style="display:none;">
-      <input type="text" id="newUsername" placeholder="New username">
-      <button id="saveUsername">Save</button>
-    </div>
-    <button id="deleteBtn">Delete Account</button>
+  <h1>Manage Account</h1>
+  <p>Account username: <span id="usernameDisplay"></span></p>
+  <button id="editBtn">Edit Username</button>
+  <div id="editArea" style="display:none;">
+    <input type="text" id="newUsername" placeholder="Enter new username"/>
+    <button id="saveUsername">Save</button>
   </div>
-  <button onclick="window.location.href='index.html'">Back to Home</button>
+  <br/>
+  <button id="deleteBtn" class="danger">Delete Account</button>
 </div>
 
 <script src="storage.js"></script>
 <script>
-const usernameDisplay = document.getElementById('usernameDisplay');
-const editBtn = document.getElementById('editBtn');
-const editArea = document.getElementById('editArea');
-const newUsername = document.getElementById('newUsername');
-const saveUsername = document.getElementById('saveUsername');
-const deleteBtn = document.getElementById('deleteBtn');
+  // Load logged-in user
+  let currentUser = localStorage.getItem('loggedInUser');
+  if(!currentUser){
+    alert('You must be logged in to manage your account.');
+    window.location.href = 'index.html';
+  }
 
-let deleteConfirm = false;
+  const usernameDisplay = document.getElementById('usernameDisplay');
+  usernameDisplay.textContent = currentUser;
 
-// Display current username
-function loadUsername() {
-    const user = getLoggedInUser();
-    if(user) {
-        usernameDisplay.textContent = user.username;
+  // Edit username
+  const editBtn = document.getElementById('editBtn');
+  const editArea = document.getElementById('editArea');
+  const saveUsername = document.getElementById('saveUsername');
+  const newUsernameInput = document.getElementById('newUsername');
+
+  editBtn.addEventListener('click', ()=>{
+    editArea.style.display = editArea.style.display === 'none' ? 'block' : 'none';
+  });
+
+  saveUsername.addEventListener('click', ()=>{
+    const newUsername = newUsernameInput.value.trim();
+    if(newUsername === ''){
+      alert('Username cannot be empty.');
+      return;
+    }
+
+    // Get users from localStorage
+    let users = JSON.parse(localStorage.getItem('users')) || {};
+
+    if(users[newUsername]){
+      alert('Username already exists!');
+      return;
+    }
+
+    // Update the user data
+    users[newUsername] = users[currentUser] || {};
+    delete users[currentUser];
+
+    localStorage.setItem('users', JSON.stringify(users));
+    localStorage.setItem('loggedInUser', newUsername);
+    currentUser = newUsername;
+    usernameDisplay.textContent = newUsername;
+
+    alert('Username updated successfully!');
+    newUsernameInput.value = '';
+    editArea.style.display = 'none';
+  });
+
+  // Delete account
+  const deleteBtn = document.getElementById('deleteBtn');
+  let deleteConfirm = false;
+
+  deleteBtn.addEventListener('click', ()=>{
+    if(!deleteConfirm){
+      deleteBtn.textContent = 'Press again to confirm';
+      deleteConfirm = true;
+      setTimeout(()=>{
+        deleteBtn.textContent = 'Delete Account';
+        deleteConfirm = false;
+      },5000);
     } else {
-        alert('No user logged in');
-        window.location.href = 'login.html';
+      let users = JSON.parse(localStorage.getItem('users')) || {};
+      delete users[currentUser];
+      localStorage.setItem('users', JSON.stringify(users));
+      localStorage.removeItem('loggedInUser');
+
+      alert('Account deleted successfully!');
+      window.location.href = 'index.html';
     }
-}
-
-// Edit username
-editBtn.addEventListener('click', () => {
-    editArea.style.display = 'block';
-    newUsername.value = usernameDisplay.textContent;
-});
-
-saveUsername.addEventListener('click', () => {
-    const val = newUsername.value.trim();
-    if(val) {
-        editUsername(val);
-        loadUsername();
-        alert('Username updated!');
-        editArea.style.display = 'none';
-    }
-});
-
-// Delete account with double confirm
-deleteBtn.addEventListener('click', () => {
-    if(!deleteConfirm) {
-        deleteBtn.textContent = 'Press again to confirm';
-        deleteConfirm = true;
-        setTimeout(() => {
-            deleteBtn.textContent = 'Delete Account';
-            deleteConfirm = false;
-        }, 3000);
-    } else {
-        deleteAccount();
-        alert('Account deleted!');
-        window.location.href = 'index.html';
-    }
-});
-
-loadUsername();
+  });
 </script>
 
 </body>
